# reddit_trend_analyzer

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_template.md
data/: reddit_trends.db
notebooks/: reddit_trend_analyzer.ipynb
reddit_trend_analyzer/: __init__.py  analyze_data.py  collect_data.py
scripts/: analyze_data.py  collect_data.py  query_data.py
